--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,228 @@
 /* You can add global styles to this file, and also import other style files */
+.titulo-oscuro {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #38515e;
+    letter-spacing: 2px;
+    font-weight: lighter;
+  }
+  
+  .tit-alojamiento {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: white;
+    font-weight: lighter;
+    text-align: left;
+    letter-spacing: 2px;
+    font-size: 20px;
+    line-height: 32px;
+    text-decoration-line: underline;
+  }
+  
+  .text-alojamiento {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: white;
+    font-weight: lighter;
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 25px;
+    text-align: left;
+  }
+  
+  .texto-azul {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #38515e;
+    font-size: 22px;
+    letter-spacing: 1px;
+    line-height: 24px;
+    text-align: center;
+    max-width: 60%;
+  }
+  
+  .texto-blanco {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-weight: lighter;
+    color: white;
+    font-size: 20px;
+    letter-spacing: 1px;
+    line-height: 24px;
+    margin: 0 20px;
+    text-align: center;
+    max-width: 60%;
+  }
+  
+  .titulo-blanco {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: white;
+    font-weight: lighter;
+    text-align: center;
+    letter-spacing: 2px;
+    font-size: 30px;
+    line-height: 32px;
+  }
+  
+  #fecha {
+    font-family: playFair;
+    font-size: 60px;
+    text-align: center;
+    color: white;
+    margin-top: 60px;
+    margin-bottom: 0px;
+  }
+  
+  #lugar {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: white;
+    font-weight: lighter;
+    text-align: center;
+    letter-spacing: 2px;
+    font-size: 30px;
+    padding-bottom: 20px;
+  }
+  
+  .img-viaje {
+    vertical-align: middle;
+    max-width: 250px;
+    margin-left: auto;
+  }
+  
+  .img-cad {
+    vertical-align: middle;
+    max-width: 250px;
+  }
+  
+  .subt-color {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: #38515e;
+    text-align: left;
+    font-size: 20px;
+    line-height: 32px;
+    text-decoration-line: underline;
+    text-align: center;
+    margin: auto;
+  }
+  
+  .subt-color-normal {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: #38515e;
+    font-weight: lighter;
+    text-align: left;
+    font-size: 20px;
+    line-height: 25px;
+    text-align: center;
+    margin: auto;
+  }
+  
+  .p-tit {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    max-width: 80%;
+    margin: auto;
+  }
+  
+  .p-resp {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 18px;
+    max-width: 80%;
+    margin: auto;
+  }
+  
+  /*imagenes*/
+  .iconos {
+    max-width: 150px;
+    margin-left: auto;
+  }
+  
+  .tituloorganigrama {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #38515e;
+    font-size: 24px;
+    letter-spacing: 5px;
+    font-weight: lighter;
+    margin-bottom: 0px;
+    line-height: 26px;
+  }
+  
+  .row .col {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  .bkg-dark {
+    background-color: #38515e;
+  }
+  
+  #dress-code {
+    text-align: center;
+  }
+  
+  .texto-azul-claro {
+    color: #869dad;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    letter-spacing: 4px;
+    font-size: 30px;
+  }
+  
+  #dress-code {
+    padding: 20px;
+    margin-bottom: 100px;
+  }
+  
+  .schedule .btn {
+    width: 150px;
+    margin-top: 0.5rem;
+  }
+  
+  .btn {
+    width: 180px;
+    margin-top: 0.5rem;
+  }
+  
+  .schedule .btn:hover {
+    background-color: #38515e;
+    color: white;
+  }
+  
+  .rect-linea {
+    border: 1px solid black;
+    width: 500px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  
+  .img-dress {
+    max-width: 90vw;
+    width: 500px;
+  }
+  
+  @media (max-width: 768px) {
+    .iconos {
+      margin: 0 auto;
+    }
+    .img-viaje {
+      margin: 0 auto;
+    }
+  }
+  
+  @media (max-width: 992px) {
+    .texto-azul {
+      max-width: 80%;
+    }
+    .nav-link {
+      text-align: center;
+    }
+  }
+  
