--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1 id="titulo">Sara & Freddy </h1>
   <nav class="navbar navbar-expand-lg navbar-dark menu">
     <div class="container-fluid">
-      <a href="./"></a>
+      <a routerLink="./"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -10,24 +10,22 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav w-100 justify-content-center">
           <li class="nav-item">
-            <a class="nav-link active" href="./">¡Bienvenidos!</a>
+            <a class="nav-link" routerLink="/home" routerLinkActive="active">¡Bienvenidos!</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cadiz.html">Cómo llegar</a>
+            <a class="nav-link" routerLink="/travel" routerLinkActive="active">Cómo llegar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./regalos.html">Regalos</a>
+            <a class="nav-link" routerLink="/gift" routerLinkActive="active">Regalos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./faq.html">FAQ</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#confirm">Confirma asistencia</a>
+            <a class="nav-link" routerLink="/faq" routerLinkActive="active">FAQ</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 </header>
-
-<router-outlet></router-outlet>
+<main>
+  <router-outlet></router-outlet>
+</main>
