Se crea componente FAQ

--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,1 +1,65 @@
-<p>faq works!</p>
+<div class="container">
+
+    <h2 class="text-center titulo-oscuro py-4">Preguntas frecuentes</h2>
+
+    <p class="p-tit mb-0">
+        ¿Cuánto tiempo antes debería llegar a Cádiz?
+    </p>
+    <p class="p-resp mt-0 mb-4">
+        Si viajas desde Colombia, lo ideal sería estar al menos un par de días antes del evento. Si el viaje es más
+        corto, puedes llegar la noche antes sin problema
+    </p>
+
+    <p class="p-tit mb-0">
+        ¿Qué clima hace en Cádiz en esa época?
+    </p>
+    <p class="p-resp mt-0 mb-4">
+        En septiembre todavía es verano. Al tratarse de una ciudad costera, la temperatura es mucho más suave que en
+        otras zonas del país. La Tª en esta época del año suele oscilar entre los 20/26º.
+    </p>
+
+    <p class="p-tit mb-0">
+        ¿Cómo puedo ir hasta el lugar de la celebración?
+    </p>
+    <p class="p-resp mt-0 mb-4">
+        Cádiz es una ciudad pequeña, tanto la ceremonia como la cena y la fiesta serán en el centro histórico de la
+        ciudad,
+        así que puedes ir caminando o si prefieres puedes coger taxi.
+    </p>
+
+    <p class="p-tit mb-0">
+        ¿Cuándo debería comprar los vuelos?
+    </p>
+    <p class="p-resp mt-0 mb-4">
+        ¡Cuanto antes mejor! Los precios suben a medida que se acerca la fecha, un buen precio para los vuelos desde
+        Colombia es de 500€ (ida y vuelta).
+    </p>
+
+    <p class="p-tit mb-0">
+        ¿Cuánto dura el viaje en tren desde Madrid?
+    </p>
+    <p class="p-resp mt-0 mb-4">
+        El trayecto en tren desde Madrid a Cádiz suele durar entre 4h y 4h 30min (depende del tren que elijas).
+    </p>
+
+    <p class="p-tit mb-0">
+        ¿Cuánto dura el viaje en autobús desde Madrid?
+    </p>
+    <p class="p-resp mt-0 mb-4">
+        En autobús desde Madrid hasta Cádiz se tardan unas 8 horas.
+    </p>
+
+    <p class="p-tit mb-0">
+        ¿Cuánto dura el viaje en avión desde Madrid?
+    </p>
+    <p class="p-resp mt-0 mb-4">
+        En avión son tan sólo 1h hasta Jerez de la Frontera (XRY), desde ahí tendrás que coger tren para llegar a
+        Cádiz, y este trayecto dura aproximadamente 40 min.
+    </p>
+
+    <div class="rect-linea">
+        <p class="p-tit mb-0">¿Tienes alguna duda más?</p>
+        <p class="p-resp">¡Ponte en contacto con nosotros!</p>
+    </div>
+
+</div>
