Se crea componente Travel y se ajusta componente FAQ

--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -57,7 +57,7 @@
         Cádiz, y este trayecto dura aproximadamente 40 min.
     </p>
 
-    <div class="rect-linea">
+    <div class="rect-linea mb-4">
         <p class="p-tit mb-0">¿Tienes alguna duda más?</p>
         <p class="p-resp">¡Ponte en contacto con nosotros!</p>
     </div>
