--- a/src/app/components/travel/travel.component.html
+++ b/src/app/components/travel/travel.component.html
@@ -1,1 +1,232 @@
-<p>travel works!</p>
+<div class="container py-3">
+
+    <div class="row">
+
+        <div class="col-md-3 d-flex">
+            <img class="iconos" src="/assets/imagenes/iconos_avion_tren.svg" />
+        </div>
+
+        <div class="col col-md-9">
+            <p>
+                Si llegáis en avión, una de las mejores opciones es elegir el viaje hasta el aeropuerto de Jerez de la
+                Frontera (XRY).
+                Una vez en Jerez, podéis coger un tren de cercanías en el propio aeropuerto que os llevará hasta la
+                ciudad
+                de Cádiz.
+            </p>
+            <p class="m-0">
+                También podéis elegir llegar al aeropuerto de Sevilla (está algo más alejado que Jerez, pero desde allí
+                también salen trenes hasta Cádiz)
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3 d-flex">
+            <img class="iconos" src="/assets/imagenes/iconos_tren.svg" />
+        </div>
+
+        <div class="col col-md-9">
+            <p>
+                Otra opción es llegar directamente en tren desde Madrid, el viaje dura entre 4h y 4h 30min. También
+                tenéis
+                la opción de ir en bus, será algo más barato que
+                el viaje en tren, pero también mucho más
+                largo.
+            </p>
+            <p class="m-0">
+                También tenéis la opción de ir en bus, será algo más barato que el viaje en tren, pero también mucho más
+                largo (unas 8h).
+            </p>
+
+            <div class="col-lg-6 col-sm-2">
+                <a class="btn btn-outline-secondary" href="https://venta.renfe.com/vol/search.do?c=_xzgO"
+                    target="_blank">
+                    Ver trenes
+                </a>
+
+                <a class="btn btn-outline-secondary ms-1" href="https://www.alsa.es/destino/cadiz" target="_blank">
+                    Ver autobuses
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<section class="bkg-dark w-100 py-4">
+    <div class="container d-flex flex-column align-items-center">
+        <p class="titulo-blanco py-1">Alojamiento</p>
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="col py-1">
+                    <img class="img-viaje" src="/assets/imagenes/parador-cadiz-exteriores.jpg" />
+                </div>
+
+                <div class="col py-3">
+                    <p class="tit-alojamiento">Parador Atlántico</p>
+                    <p class="text-alojamiento">Podéis alojaros en el mismo hotel donde será la calebración. Si estáis
+                        interesados
+                        en esta opción poneros en contacto con nosotros para que os ayudemos a gestionar la reserva
+                        (hacen
+                        “precio especial”)</p>
+                    <a class="btn btn-outline-light" href="https://www.parador.es/es/paradores/parador-de-cadiz"
+                        target="_blank">
+                        ver el Hotel
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col py-2">
+                    <img class="img-viaje" src="/assets/imagenes/alojamiento-airbnb.jpg" />
+                </div>
+
+                <div class="col py-3">
+                    <p class="tit-alojamiento">Otras opciones</p>
+                    <p class="text-alojamiento">También podéis mirar opciones de hoteles y apartamentos en Booking.com o
+                        en
+                        Airbnb.es, para alojaros en la ciudad. </p>
+                    <a class="btn btn-outline-light"
+                        href="https://www.booking.com/searchresults.es.html?aid=304142&label=gen173bo-1DCAEoggI46AdIClgDaEaIAQGYAQq4ARfIAQzYAQPoAQH4AQSIAgGYAiGoAgO4Ap3CpYwGwAIB0gIkNWMyN2M1MDctMWQzZC00YjJmLWFiMjctM2M1NDUxNGNjMzU02AIE4AIB&sid=ef01f25f07a0159b5a150f493660b87b&sb=1&src=searchresults&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Fsearchresults.es.html%3Faid%3D304142%3Blabel%3Dgen173bo-1DCAEoggI46AdIClgDaEaIAQGYAQq4ARfIAQzYAQPoAQH4AQSIAgGYAiGoAgO4Ap3CpYwGwAIB0gIkNWMyN2M1MDctMWQzZC00YjJmLWFiMjctM2M1NDUxNGNjMzU02AIE4AIB%3Bsid%3Def01f25f07a0159b5a150f493660b87b%3Btmpl%3Dsearchresults%3Bcheckin%3D2021-12-04%3Bcheckout%3D2021-12-08%3Bclass_interval%3D1%3Bdest_id%3D-388133%3Bdest_type%3Dcity%3Bdtdisc%3D0%3Binac%3D0%3Bindex_postcard%3D0%3Blabel_click%3Dundef%3Boffset%3D0%3Bpostcard%3D0%3Braw_dest_type%3Dcity%3Broom1%3DA%252CA%3Bsb_price_type%3Dtotal%3Bshw_aparth%3D1%3Bslp_r_match%3D0%3Bsrpvid%3D88467256203600a2%3Bss_all%3D0%3Bssb%3Dempty%3Bsshis%3D0%3Btrack_hp_back_button%3D1%26%3B&ss=C%C3%A1diz%2C+C%C3%A1diz%2C+Andaluc%C3%ADa%2C+Espa%C3%B1a&is_ski_area=&ssne=Las+Arenas&ssne_untouched=Las+Arenas&city=-388133&checkin_year=&checkin_month=&checkout_year=&checkout_month=&group_adults=2&group_children=0&no_rooms=1&from_sf=1&sr_change_search=1&ss_raw=C%C3%81DIZ&ac_position=3&ac_langcode=es&ac_click_type=b&dest_id=7499472&dest_type=hotel&place_id_lat=36.507446&place_id_lon=-6.277416&search_pageview_id=88467256203600a2&search_selected=true&search_pageview_id=88467256203600a2&ac_suggestion_list_length=5&ac_suggestion_theme_list_length=0"
+                        target="_blank">
+                        Booking.com
+                    </a>
+                    <a class="btn btn-outline-light"
+                        href="https://www.airbnb.es/s/Cadiz--C%C3%A1diz--Espa%C3%B1a/homes?tab_id=home_tab&refinement_paths%5B%5D=%2Fhomes&flexible_trip_dates%5B%5D=april&flexible_trip_dates%5B%5D=march&flexible_trip_dates%5B%5D=september&flexible_trip_lengths%5B%5D=weekend_trip&date_picker_type=calendar&query=Cadiz%2C%20C%C3%A1diz%2C%20Espa%C3%B1a&place_id=ChIJgUFdhGDRDQ0RpoBI5zRtHGo&source=structured_search_input_header&search_type=autocomplete_click"
+                        target="_blank">
+                        Airbnb.es
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="w-100 d-flex flex-column align-items-center py-4">
+    <p class="tituloorganigrama mb-4">¿QUÉ HACER/VER EN CÁDIZ?</p>
+    <p class="subt-color-normal">
+        Cádiz es la ciudad más antigua de occidente, conocida como “la tacita de plata” o “la ciudad trimilenaria”,
+        es una pequeña ciudad al sur de España rodeada de mar.
+    </p>
+
+    <div class="container">
+        <div class="row">
+
+            <div class="col py-4 d-flex align-items-center">
+                <img class="img-cad" src="/assets/imagenes/catedral.jpg" />
+                <p class="subt-color">Catedral de Cádiz</p>
+                <p class="subt-color-normal">Llamativa por su diversidad de estilos arquitectónicos, ya que las obras de
+                    construcción duraron más de
+                    100 años! </p>
+            </div>
+
+            <div class="col py-4 d-flex align-items-center">
+                <img class="img-cad" src="/assets/imagenes/dama.jpg" />
+                <p class="subt-color">Museo Arqueológico</p>
+                <p class="subt-color-normal">Lleno de piezas de diferentes civilizaciones que habitaron en Cádiz, una de
+                    sus piezas más famosas: el sarcófago fenicio "Dama de Cádiz".
+                </p>
+            </div>
+
+            <div class="col py-4 d-flex align-items-center">
+                <img class="img-cad" src="/assets/imagenes/caleta.jpg" />
+                <p class="subt-color">Atardecer en la Caleta</p>
+                <p class="subt-color-normal">Disfrutar de uno de los atardeceres más bonitos del mundo en la playa de la
+                    Caleta. </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col py-4 d-flex align-items-center">
+                <img class="img-cad" src="/assets/imagenes/torre-tavira.jpg" />
+                <p class="subt-color">Torre Tavira</p>
+                <p class="subt-color-normal">Una de las muchas torres miradores de Cádiz, famosa por su cámara oscura.
+                    ¡Una
+                    visita obligada en la ciudad! </p>
+            </div>
+
+            <div class="col py-4 d-flex align-items-center">
+                <img class="img-cad" src="/assets/imagenes/pescao-frito.jpg" />
+                <p class="subt-color">Una de pescaito frito!</p>
+                <p class="subt-color-normal">No puedes irte de Cádiz sin probar un cartucho de "pescao frito" en alguno
+                    de
+                    las freidurías del centro (Europa o Las Flores). No puedes dejar de probar el "cazón en adobo". </p>
+            </div>
+
+            <div class="col py-4 d-flex align-items-center">
+                <img class="img-cad" src="/assets/imagenes/el-manteca.jpg" />
+                <p class="subt-color">Tapeo en "El Manteca"</p>
+                <p class="subt-color-normal">Tampoco puedes ir a Cádiz y no pasar por la Taberna "El Manteca", uno de
+                    los
+                    sitios más típicos para tapear en Cádiz! Recomendación: una de "chicharrones especiales" y mojama!
+                </p>
+            </div>
+
+            <div class="row">
+                <div class="col py-4 d-flex align-items-center">
+                    <img class="img-cad" src="/assets/imagenes/calle-sagasta.jpg" />
+                    <p class="subt-color">Perderse por sus calles</p>
+                    <p class="subt-color-normal">Recorrer sin rumbo fijo las callejuelas del centro histórico, pasando
+                        por el
+                        tradicional Barrio del Pópulo y sin olvidar el pintoresco Barrio de la Viña. </p>
+                </div>
+
+                <div class="col py-4 d-flex align-items-center">
+                    <img class="img-cad" src="/assets/imagenes/castillo-st-catalina.jpg" />
+                    <p class="subt-color">Castillo de Santa Catalina</p>
+                    <p class="subt-color-normal">Fortificación del siglo XVI situada en la playa de La Caleta, se
+                        adentra en
+                        el mar
+                        gracias
+                        a unas escolleras. Llama la atención las puntas que a manera de estrella salen al mar.
+                    </p>
+                </div>
+
+                <div class="col py-4 d-flex align-items-center">
+                    <img class="img-cad" src="/assets/imagenes/castillo-san-sebastian.jpg" />
+                    <p class="subt-color">Castillo de San Sebastián"</p>
+                    <p class="subt-color-normal">Fortaleza de la ciudad, ubicada en uno de los extremos de la playa de
+                        La Caleta sobre un pequeño islote. Lo puedes visitar solo por fuera pero merece la pena
+                        sobretodo al
+                        atardecer.
+                    </p>
+                </div>
+
+                <div class="row">
+                    <div class="col py-4 d-flex align-items-center">
+                        <img class="img-cad" src="/assets/imagenes/momumento a las cortes.jpg" />
+                        <p class="subt-color">El monumento a las Cortes de 1812</p>
+                        <p class="subt-color-normal">Monumento conmemorativo que recuerda la Constitución de 1812
+                            ubicado en la Plaza de España de Cádiz. Al estar en la plaza lo puedes ver a cualquier hora
+                            y gratis!
+                        </p>
+                    </div>
+
+                    <div class="col py-4 d-flex align-items-center">
+                        <img class="img-cad" src="/assets/imagenes/teatro-romano.jpg" />
+                        <p class="subt-color">Teatro Romano</p>
+                        <p class="subt-color-normal">Construido hacia el 70 aC cuando el Gaditano Lucio Cornelio Balbo
+                            "el
+                            Mayor", amigo personal y consejero de Julio César.
+                        </p>
+                    </div>
+
+                    <div class="col py-4 d-flex align-items-center">
+                        <img class="img-cad" src="/assets/imagenes/playa-victoria.jpg" />
+                        <p class="subt-color">Paseos infinitos por las playas"</p>
+                        <p class="subt-color-normal">Kilómetros de playa para recorrer y disfrutar de la brisa y el
+                            sonido del
+                            mar.
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
