Se termina modulo regalos

--- a/src/app/components/gift-list/gift-list.component.html
+++ b/src/app/components/gift-list/gift-list.component.html
@@ -7,10 +7,15 @@
         hacernos un regalo extra estaremos muy agradecidos!
     </p>
     <p class="p-resp mt-0 mb-4">
-        Preferimos dinero, puedes darnos un sobre el día de la celebración, o si prefieres puedes hacernos una
-        transferencia a este número:
+        Preferimos dinero, puedes dejárnoslo en un sobre el día de la celebración, o si prefieres puedes hacernos una
+        transferencia a este número de cuenta:
+    </p>
+    <p class="text-center num-cuenta" >
+        ES96 1465 0100 97 1739671183
     </p>
 
-
+    <div class="d-flex align-items-center">
+        <img class="sobre" src="/assets/imagenes/iconos_sobre.svg" />
+    </div>
 
 </div>
