--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1 id="titulo">Sara & Freddy </h1>
   <nav class="navbar navbar-expand-lg navbar-dark menu">
     <div class="container-fluid">
-      <a routerLink="./"></a>
+      <a routerLink="./" class="navbar-brand">Sara & Freddy</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
