--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,10 +4,8 @@
     <img src="/assets/imagenes/textoNosCasamos.png" class="col-6 col-md-4 col-lg-3" alt="¡Nos casamos!" />
     <p class="texto-azul">Y queremos que nos acompañes este día tan importante y especial para nosotros.</p>
 
-    <p class="texto-azul">En esta web encontrarás todos los detalles del evento, así como información sobre el
-        lugar,
-        alojamiento y transporte
-        para que todo sea perfecto.</p>
+    <p class="texto-azul">En esta web encontrarás los detalles del evento, así como información sobre el
+        lugar, alojamiento y transporte para que todo sea perfecto.</p>
 </section>
 
 
@@ -71,7 +69,7 @@
 <section id="confirm" class="bkg-dark py-4">
     <div class="container d-flex flex-column align-items-center ">
         <p class="titulo-blanco">CONFIRMA TU ASISTENCIA</p>
-        <P class="texto-blanco">Por favor, confírmanos tu asistencia para que podamos organizar todo mejor.</P>
+        <P class="texto-blanco">Por favor, confírmanos tu asistencia antes del 1 de agosto para que podamos organizar todo mejor. ¡Muchas gracias!</P>
     </div>
 </section>
 
