--- a/src/app/components/travel/travel.component.css
+++ b/src/app/components/travel/travel.component.css
@@ -4,29 +4,48 @@
 }
 
 .subt-color {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    color: #38515e;
-    text-align: left;
-    font-size: 20px;
-    line-height: 32px;
-    text-decoration-line: underline;
-    text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #38515e;
+  text-align: left;
+  font-size: 20px;
+  line-height: 32px;
+  text-decoration-line: underline;
+  text-align: center;
+}
+
+.subt-color-normal {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #38515e;
+  font-weight: lighter;
+  text-align: left;
+  font-size: 20px;
+  line-height: 25px;
+  text-align: center;
+}
+
+
+@media (max-width: 992px) {
+  .alojamiento {
+    margin: 0 auto;
   }
-  
-  .subt-color-normal {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    color: #38515e;
-    font-weight: lighter;
-    text-align: left;
-    font-size: 20px;
-    line-height: 25px;
-    text-align: center;
+
+  .tarjeta {
+    width: 45%;
   }
+}
 
 @media (max-width: 768px) {
   .tarjeta {
     width: 80%;
   }
 }
+
+
+@media (max-width: 492px) {
+  .tit-alojamiento {
+    text-align: center;
+  }
+
+  }
