--- a/src/app/components/travel/travel.component.html
+++ b/src/app/components/travel/travel.component.html
@@ -11,12 +11,11 @@
                 Si llegáis en avión, una de las mejores opciones es elegir el viaje hasta el aeropuerto de Jerez de la
                 Frontera (XRY).
                 Una vez en Jerez, podéis coger un tren de cercanías en el propio aeropuerto que os llevará hasta la
-                ciudad
-                de Cádiz.
+                ciudad de Cádiz.
             </p>
             <p class="m-0">
                 También podéis elegir llegar al aeropuerto de Sevilla (está algo más alejado que Jerez, pero desde allí
-                también salen trenes hasta Cádiz)
+                también salen trenes hasta Cádiz).
             </p>
         </div>
     </div>
@@ -34,10 +33,7 @@
                 el viaje en tren, pero también mucho más
                 largo.
             </p>
-            <p class="m-0">
-                También tenéis la opción de ir en bus, será algo más barato que el viaje en tren, pero también mucho más
-                largo (unas 8h).
-            </p>
+           
 
             <div class="col-lg-6 col-sm-2">
                 <a class="btn btn-outline-secondary" href="https://venta.renfe.com/vol/search.do?c=_xzgO"
@@ -67,13 +63,12 @@
                     <img class="img-viaje" src="/assets/imagenes/parador-cadiz-exteriores.jpg" />
                 </div>
 
-                <div class="col py-3">
+                <div class="col py-3 align-items-center align-items-sm-start">
                     <p class="tit-alojamiento">Parador Atlántico</p>
-                    <p class="text-alojamiento">Podéis alojaros en el mismo hotel donde será la calebración. Si estáis
+                    <p class="text-alojamiento">Podéis alojaros en el mismo hotel donde será la celebración. Si estáis
                         interesados
                         en esta opción poneros en contacto con nosotros para que os ayudemos a gestionar la reserva
-                        (hacen
-                        “precio especial”)</p>
+                        (hacen “precio especial”).</p>
                     <a class="btn btn-outline-light" href="https://www.parador.es/es/paradores/parador-de-cadiz"
                         target="_blank">
                         ver el Hotel
@@ -85,11 +80,10 @@
                     <img class="img-viaje" src="/assets/imagenes/alojamiento-airbnb.jpg" />
                 </div>
 
-                <div class="col py-3">
+                <div class="col py-3 align-items-center align-items-sm-start">
                     <p class="tit-alojamiento">Otras opciones</p>
                     <p class="text-alojamiento">También podéis mirar opciones de hoteles y apartamentos en Booking.com o
-                        en
-                        Airbnb.es, para alojaros en la ciudad. </p>
+                        en Airbnb.es, para alojaros en la ciudad. </p>
                     <a class="btn btn-outline-light"
                         href="https://www.booking.com/searchresults.es.html?aid=304142&label=gen173bo-1DCAEoggI46AdIClgDaEaIAQGYAQq4ARfIAQzYAQPoAQH4AQSIAgGYAiGoAgO4Ap3CpYwGwAIB0gIkNWMyN2M1MDctMWQzZC00YjJmLWFiMjctM2M1NDUxNGNjMzU02AIE4AIB&sid=ef01f25f07a0159b5a150f493660b87b&sb=1&src=searchresults&src_elem=sb&error_url=https%3A%2F%2Fwww.booking.com%2Fsearchresults.es.html%3Faid%3D304142%3Blabel%3Dgen173bo-1DCAEoggI46AdIClgDaEaIAQGYAQq4ARfIAQzYAQPoAQH4AQSIAgGYAiGoAgO4Ap3CpYwGwAIB0gIkNWMyN2M1MDctMWQzZC00YjJmLWFiMjctM2M1NDUxNGNjMzU02AIE4AIB%3Bsid%3Def01f25f07a0159b5a150f493660b87b%3Btmpl%3Dsearchresults%3Bcheckin%3D2021-12-04%3Bcheckout%3D2021-12-08%3Bclass_interval%3D1%3Bdest_id%3D-388133%3Bdest_type%3Dcity%3Bdtdisc%3D0%3Binac%3D0%3Bindex_postcard%3D0%3Blabel_click%3Dundef%3Boffset%3D0%3Bpostcard%3D0%3Braw_dest_type%3Dcity%3Broom1%3DA%252CA%3Bsb_price_type%3Dtotal%3Bshw_aparth%3D1%3Bslp_r_match%3D0%3Bsrpvid%3D88467256203600a2%3Bss_all%3D0%3Bssb%3Dempty%3Bsshis%3D0%3Btrack_hp_back_button%3D1%26%3B&ss=C%C3%A1diz%2C+C%C3%A1diz%2C+Andaluc%C3%ADa%2C+Espa%C3%B1a&is_ski_area=&ssne=Las+Arenas&ssne_untouched=Las+Arenas&city=-388133&checkin_year=&checkin_month=&checkout_year=&checkout_month=&group_adults=2&group_children=0&no_rooms=1&from_sf=1&sr_change_search=1&ss_raw=C%C3%81DIZ&ac_position=3&ac_langcode=es&ac_click_type=b&dest_id=7499472&dest_type=hotel&place_id_lat=36.507446&place_id_lon=-6.277416&search_pageview_id=88467256203600a2&search_selected=true&search_pageview_id=88467256203600a2&ac_suggestion_list_length=5&ac_suggestion_theme_list_length=0"
                         target="_blank">
@@ -114,7 +108,7 @@
         es una pequeña ciudad al sur de España rodeada de mar.
     </p>
 
-    <div class="container d-flex flex-wrap">
+    <div class="container d-flex flex-wrap justify-content-center">
 
         <div class=" py-4 px-2 d-flex flex-column align-items-center tarjeta" *ngFor="let plan of planList">
             <img class="img-cad" src="{{plan.image}}" />
