Se ajustan tipografías y tamaños de textos

--- a/src/app/components/gift-list/gift-list.component.html
+++ b/src/app/components/gift-list/gift-list.component.html
@@ -1,12 +1,12 @@
 <div class="container">
 
-    <h2 class="text-center titulo-oscuro py-4">¿Quieres hacernos un regalo?</h2>
+    <h2 class="text-center titulo-regalos py-4">¿Quieres hacernos un regalo?</h2>
 
-    <p class="p-resp mt-0 mb-4">
+    <p class="p-resp mt-0 mb-4 text-normal">
         Nuestro mayor regalo es que podáis venir a celebrar este día tan importante con nosotros, pero si queréis
         hacernos un regalo extra estaremos muy agradecidos!
     </p>
-    <p class="p-resp mt-0 mb-4">
+    <p class="p-resp mt-0 mb-4 text-normal">
         Preferimos dinero, puedes dejárnoslo en un sobre el día de la celebración, o si prefieres puedes hacernos una
         transferencia a este número de cuenta:
     </p>
