--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,9 +26,9 @@
 
             <div class="col py-3">
                 <p class="tituloorganigrama">Ceremonia</p>
-                <p class="m-0">Iglesia de Santo Domingo</p>
-                <p class="m-0">Cádiz, España</p>
-                <p class="m-0">18:15 h</p>
+                <p class="m-0 text-programa">Iglesia de Santo Domingo</p>
+                <p class="m-0 text-programa">Cádiz, España</p>
+                <p class="m-0 text-programa">18:15 h</p>
                 <a class="btn btn-outline-secondary" href="https://goo.gl/maps/oSTm5HH9ak9JMLxcA" target="_blank">
                     VER EN MAPA
                 </a>
@@ -40,9 +40,9 @@
 
             <div class="col py-3">
                 <p class="tituloorganigrama">Chin chin + cena</p>
-                <p class="m-0">Parador Hotel Atlántico</p>
-                <p class="m-0">Cádiz, España</p>
-                <p class="m-0">21:00 h</p>
+                <p class="m-0 text-programa">Parador Hotel Atlántico</p>
+                <p class="m-0 text-programa">Cádiz, España</p>
+                <p class="m-0 text-programa">21:00 h</p>
                 <a class="btn btn-outline-secondary" href="https://g.page/parador-de-cadiz?share" target="_blank">
                     VER EN MAPA
                 </a>
@@ -54,9 +54,9 @@
 
             <div class="col py-3">
                 <p class="tituloorganigrama">¡Hora de BAILAR!</p>
-                <p class="m-0">Parador Hotel Atlántico,</p>
-                <p class="m-0">Cádiz, España</p>
-                <p class="m-0">22:30-02:00 h</p>
+                <p class="m-0 text-programa">Parador Hotel Atlántico,</p>
+                <p class="m-0 text-programa">Cádiz, España</p>
+                <p class="m-0 text-programa">22:30-02:00 h</p>
                 <a class="btn btn-outline-secondary" href="https://g.page/parador-de-cadiz?share" target="_blank">
                     VER EN MAPA
                 </a>
