--- a/src/app/components/travel/travel.component.html
+++ b/src/app/components/travel/travel.component.html
@@ -6,7 +6,7 @@
             <img class="iconos" src="/assets/imagenes/iconos_avion_tren.svg" />
         </div>
 
-        <div class="col col-md-9">
+        <div class="col col-md-9 texto-color-18">
             <p>
                 Si llegáis en avión, una de las mejores opciones es elegir el viaje hasta el aeropuerto de Jerez de la
                 Frontera (XRY).
@@ -25,7 +25,7 @@
             <img class="iconos" src="/assets/imagenes/iconos_tren.svg" />
         </div>
 
-        <div class="col col-md-9">
+        <div class="col col-md-9 texto-color-18">
             <p>
                 Otra opción es llegar directamente en tren desde Madrid, el viaje dura entre 4h y 4h 30min. También
                 tenéis
@@ -102,7 +102,7 @@
 </section>
 
 <section class="w-100 d-flex flex-column align-items-center py-4">
-    <p class="tituloorganigrama mb-4">¿QUÉ HACER/VER EN CÁDIZ?</p>
+    <p class="tituloplanes mb-4">¿QUÉ HACER/VER EN CÁDIZ?</p>
     <p class="subt-color-normal">
         Cádiz es la ciudad más antigua de occidente, conocida como “la tacita de plata” o “la ciudad trimilenaria”,
         es una pequeña ciudad al sur de España rodeada de mar.
