--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,8 @@
 }
 
 .menu {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #869dad;
   letter-spacing: 2px;
 }
@@ -20,6 +21,7 @@
 
 .navbar-dark .navbar-nav .nav-link {
   color: white;
+  
 }
 
 .navbar-dark .navbar-nav .nav-link.active {
