--- a/src/app/components/gift-list/gift-list.component.css
+++ b/src/app/components/gift-list/gift-list.component.css
@@ -1,9 +1,10 @@
 .num-cuenta {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.35rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 1.5rem;
     color: #38515e;
-    letter-spacing: 2px;
-    font-weight: lighter;
+    letter-spacing: 3px;
+    margin-bottom: 0px;
   }
 
   .sobre {
@@ -11,3 +12,24 @@
     vertical-align: middle;
     margin: auto;
    }
+
+   .titulo-regalos {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    color: #38515e;
+    font-size: 26px;
+    letter-spacing: 5px;
+    margin-bottom: 0px;
+    line-height: 26px;
+    text-align: center
+  }
+
+  .text-normal {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-size: 18px;
+    max-width: 80%;
+    margin: auto;
+    text-align: center;
+  }
+  
