--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,5 +1,15 @@
 .menu {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #869dad;
   letter-spacing: 2px;
+}
+
+.text-programa {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  line-height: normal;
+  color: #010608;
+  font-weight: lighter;
+
 }
