--- a/src/app/components/travel/travel.component.css
+++ b/src/app/components/travel/travel.component.css
@@ -5,7 +5,7 @@
 
 .subt-color {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #38515e;
   text-align: left;
   font-size: 20px;
@@ -15,14 +15,34 @@
 }
 
 .subt-color-normal {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: #38515e;
   font-weight: lighter;
-  text-align: left;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 25px;
   text-align: center;
+}
+
+.texto-color-18 {
+  font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #38515e;
+  text-align: left;
+  font-size: 18px;
+  line-height: 25px;
+  
+}
+
+.tituloplanes {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: #38515e;
+  font-size: 26px;
+  letter-spacing: 5px;
+  margin-bottom: 0px;
+  line-height: 26px;
+  text-align: center
 }
 
 
@@ -48,4 +68,12 @@
     text-align: center;
   }
 
+  .text-alojamiento {
+    text-align: center;
   }
+
+  .texto-color-18 {
+    text-align: center;
+  }
+
+}
