--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,9 +26,9 @@
 
             <div class="col py-3">
                 <p class="tituloorganigrama">Ceremonia</p>
-                <p class="m-0 text-programa">Iglesia de Santo Domingo</p>
+                <p class="m-0 text-programa">Iglesia Conventual de Santo Domingo</p>
                 <p class="m-0 text-programa">Cádiz, España</p>
-                <p class="m-0 text-programa">18:15 h</p>
+                <p class="m-0 text-programa">18:30 h</p>
                 <a class="btn btn-outline-secondary" href="https://goo.gl/maps/oSTm5HH9ak9JMLxcA" target="_blank">
                     VER EN MAPA
                 </a>
@@ -89,14 +89,14 @@
 
     <div class="d-flex justify-content-center">
 
-        <a class="btn btn-outline-secondary" href="https://www.jmcordon.com/alquiler-chaque-y-smoking" target="_blank">
-            Alquiler Jerez
+        <a class="btn btn-outline-secondary" href="https://www.google.com/maps/place/Manuel+Infante/@36.530755,-6.2987061,17z/data=!3m1!4b1!4m5!3m4!1s0xd0dd161f22b0137:0x9ad666806e66bc1a!8m2!3d36.5306903!4d-6.2963993" target="_blank">
+            Alquiler Cádiz
         </a>
 
         <a class="btn btn-outline-secondary ms-1"
-            href="https://www.google.com/maps/place/Manuel+Infante/@36.530755,-6.2987061,17z/data=!3m1!4b1!4m5!3m4!1s0xd0dd161f22b0137:0x9ad666806e66bc1a!8m2!3d36.5306903!4d-6.2963993"
+            href="https://www.jmcordon.com/alquiler-chaque-y-smoking"
             target="_blank">
-            Alquiler Cádiz
+            Alquiler Jerez
         </a>
     </div>
 
