Ajustes de texto (correcciones)

--- a/src/app/components/gift-list/gift-list.component.html
+++ b/src/app/components/gift-list/gift-list.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-center titulo-regalos py-4">¿Quieres hacernos un regalo?</h2>
 
     <p class="p-resp mt-0 mb-4 text-normal">
-        Nuestro mayor regalo es que podáis venir a celebrar este día tan importante con nosotros, pero si queréis
+        Nuestro mayor regalo es que puedas venir a celebrar este día tan importante con nosotros, pero si quieres
         hacernos un regalo extra estaremos muy agradecidos!
     </p>
     <p class="p-resp mt-0 mb-4 text-normal">
